@@ -2,7 +2,9 @@
 
 * Development
 
+- compat-26: Add ~make-temp-file~ with optional argument TEXT.
 - compat-29: Add ~funcall-with-delayed-message~ and ~with-delayed-message~.
+- compat-29: Add ~ert-with-temp-file~ and ~ert-with-temp-directory~.
 
 * Release of "Compat" Version 29.1.3.1
 
